--- a/1.17_musketeer_compatible/localisation/english/holhisind_decisions_l_english.yml
+++ b/1.17_musketeer_compatible/localisation/english/holhisind_decisions_l_english.yml
@@ -154,11 +154,17 @@
  INS_category_evacuation_desc:0 "It is inevitable, centuries of actual progress in the East Indies, swept like a broomed dust. The least we can do is to ensure that we can act quick enough to prepare ourselves for our eventual return, whenever it is."
  INS_economy_evacuation:0 "Economic Evacuation"
  INS_economy_evacuation_desc:0 "Our existing industries in the East Indies is vulnerable to foreign attacks. Instead of outright destroying them, we can instead persuade its owners to move it overseas, away from enemy aggression."
+ INS_military_evacuation:0 "Military Evacuation"
+ INS_military_evacuation_desc:0 "Our existing armament factories in the East Indies is vulnerable to foreign attacks. Instead of outright destroying them, we can instead try to move it overseas, away from enemy aggression."
+ INS_blow_up_the_refineries:0 "Blow the Oil Refineries"
+ INS_repair_the_refineries:0 "Repair the Oil Refineries"
  INS_officials_evacuation:0 "Evacuate [INS.GetAdjective] Bureaucrats"
  INS_officials_evacuation_desc:0 "Our to be government-in-exile should be staffed with the best and brightest from our bureaucracy, both to increase our capabilities for the eventual liberation of our homeland, and also denying our occupiers another advantage."
  INS_evacuate_digulists:0 "Evacuate the Digulists"
+ INS_evacuate_digulists_desc:0 "The Indonesian independence advocates at Boven Digul are at risk of being appropriated by the Japanese to our disadvantage. Perhaps it would be useful if we brought them away from danger for the time being, both to increase our capabilities for the eventual liberation of our homeland, and also denying our occupiers another advantage."
  INS_digulists_evacuated_flag:0 "§RThe Digulists§! has been §Yevacuated§!"
  INS_evacuate_stuwgroep:0 "Evacuate the Stuwgroep"
+ INS_evacuate_stuwgroep_desc:0 "The reformist circle in De Stuwgroep are close with the Americans, and for long they has been advocating for greater participation of the Indies populace both in the governace and the defence of the Archipelago, which is sadly went unheeded until it is too late. Now, perhaps they can be useful to persuade the Americans to back us up in preparing ourselves for the eventual liberation of our homeland."
  INS_stuwgroep_evacuated_flag:0 "§CThe Stuwgroep§! has been §Yevacuated§!"
 
  INS_category_pki_decisions:0 "Central Commitee of the [INS.GetRulingPartyLong]"
