--- a/1.17_musketeer_compatible/localisation/english/holhisind_focus_l_english.yml
+++ b/1.17_musketeer_compatible/localisation/english/holhisind_focus_l_english.yml
@@ -265,8 +265,12 @@ INS_through_pen_and_paper_desc:0 "Instead of seeking another bloodshed or pointl
 INS_into_the_future:0 "Into the Future"
 INS_into_the_future_desc:0 "The experience of war has brought us and our Fatherland closer than before, and with that, so is our people. After centuries of sordid experiences, the Indies has finally overcome the numerous hurdles that has come before us. It is time to stand on our own feet, together beside our allies, for victory!"
 INS_into_future_tt:0 "§Y[INS.GetName]§! is allowed to become independent when §Gwe are at peace§!"
-INS_help_our_fatherland:0 "Help our Fatherland"
-INS_help_our_fatherland_desc:0 "Any further constitutional reforms would be not possible when our Fatherland is still occupied by his enemies. We can contribute for a quicker liberation of the Fatherland if we were choose to, so that we can finally secure our self-rule."
+INS_help_our_fatherland:0 "[Root.getinshelpname]"
+INS_help_our_fatherland_desc:0 "[Root.getinshelpdesc]"
+INS_HELP_FATHERLAND:0 "Help our Fatherland"
+INS_HELP_FATHERLAND_desc:0 "Any further constitutional reforms would be not possible when our Fatherland is still occupied by his enemies. We can contribute for a quicker liberation of the Fatherland if we were choose to, so that we can finally secure our self-rule."
+INS_LIBERATE_FATHERLAND:0 "Liberate our Fatherland"
+INS_LIBERATE_FATHERLAND_desc:0 "Our fatherland has been subjugated under a power hostile to the Royal House of Oranje-Nassau. It is our duty to liberate it and restore the rightful owners."
 INS_home_defence:0 "Home Defence"
 INS_home_defence_desc:0 "The East Indies is very hard to defend with it's countless coastlines, but the loss of it would mean disaster for our Fatherland, and for our allies too. We must prepare the populace for a protacted war and use the terrain to our advantage and prepare for a possible invasion."
 INS_swpa_initiative:0 "Organize the SWPA Initiative"
@@ -380,6 +384,8 @@ INS_blood_or_soil:0 "Solve the 'Blood and Soil' Problem"
 INS_blood_or_soil_desc:0 "While we called ourselves as civil nationalists in the likes of the Indische Partij and PNI, some within our ranks has included an ethnic addition regarding the nature of our nation, much like the Kejawen adherents within Budi Utomo back then in the 1910s. We need to address this problem, lest that our nationalism would be nothing more than a thin veneer of Dutch fascism we fought against."
 INS_standing_on_our_feet:0 "Standing on Our Feet"
 INS_standing_on_our_feet_desc:0 "Indonesia as a nation can stand on their own feet, as they can prosper without groveling on other nations' and asking for their help, but with standing as equals for our mutual benefits.\n\nIt is time for us to lead by example, and establish our own bloc of mutual cooperations with the willing nations."
+INS_a_great_indonesia:0 "Towards a Great Indonesia"
+INS_a_great_indonesia_desc:0 "Time and time again, Indonesia has been united under a singular power, and then either broken up or subjugated by a foreign power. With now our freedom has been secured, it is time to safeguard our hard-fought independence. For a Great Indonesia!"
 INS_ally_japan:0 "Ally with Japan"
 INS_ally_japan_desc:0 "While it's true that they has eyeing our lands as a potential treasure trove for them, now with our independence, we can do much more than letting them conquer us first. Instead, we would join as equals in their liberation movement against Western powers!"
 INS_commit_hakko_ichiu:0 "Commit to the Asian Liberation"
@@ -419,6 +425,7 @@ INS_secure_eastern_indonesia:0 "Secure Eastern Indonesia"
 INS_secure_eastern_indonesia_desc:0 "The Revolution is not finished until all Indonesian lands has been freed from colonial rule!"
 INS_back_to_seafaring_past:0 "Harken Back to Our Seafaring Past"
 INS_back_to_seafaring_past_desc:0 "Our ancestors was at one point spread across the Indian Ocean as far as Madagascar. With our newfound vigor, we must respect our past and liberate our Malagasy brethrens from foreign yoke!"
+INS_a_free_indonesia:0 "An Indonesia for Every People"
 INS_align_with_westerners:0 "Align with the West"
 INS_align_with_westerners_desc:0 "Even though the great powers of the West are largely responsible for colonialism and imperialism at large, they also hold the majority of advanced industries in the world. We shall seek rapproachment with the Western Powers so that they can protect us in the dangerous times ahead, this time, as equals!"
 INS_reconciliation:0 "Reconciliation"
@@ -677,7 +684,7 @@ INS_prepare_flight_desc:0 "While the idea itself is a bit detestable, despite ou
 INS_build_exile_port:0 "Build the Exile Ports"
 INS_build_exile_port_desc:0 "With our limited air transport capabilities, we should prepare some well-fortified exile ports for our civilians and the government-in-exile staffs to evacuate quickly."
 INS_exile_port_cilacap_tt:0 "Controls §YCilacap§!"
-INS_build_railway_exile_tt:0 "Build one level railway from §YSemarang§! to §YCilacap§! (west of Jogjakarta)"
+INS_build_railway_exile_tt:0 "Build one level railway from §YSemarang§! to §YCilacap§! (west of Yogyakarta)"
 INS_evacuation:0 "Evacuation"
 INS_evacuation_desc:0 "A chance must be given to our populace who are wishing to fled away from the invading forces. Evenmore, should the East Indies fall, everything we have done for our countrymen would be all for naught if we cannot evacuate them in time."
 INS_merge_services:0 "Merge the Intelligence Services"
@@ -687,7 +694,7 @@ INS_separate_services_desc:0 "Both the Armed Forces and Civilian Government has 
 INS_support_pki_exile:0 "Support the PKI-SIBAR"
 INS_support_pki_exile_desc:0 "Our mutual enmities against the fascists requires us and\nthe exiled Digulists from PKI to work together, despite of our\npast enmities against each other.\n\nWe need to keep watching them, though... should that they thinking of anything ridiculous such as the "Second Indonesian Revolution"."
 INS_pki_shenanigans_tt:0 "Unlock decisions to sabotage §Ginfrastructure§! and §Rupset§! the occupational government in our §Yoccupied lands§!."
-INS_support_pki_exile_tooltip:0 "If §YThomas Najoan§! has been evacuated, he would be available as an §Ooperative§!"
+INS_support_pki_exile_tooltip:0 "If §YThomas Nayoan§! has been evacuated, he would be available as an §Ooperative§!"
 INS_intelligence_exchange:0 "Intelligence Exchange"
 INS_intelligence_exchange_desc:0 "Despite our espionage abilities is very much non-existent, cooperation with our allies' intelligence agencies would improve our information-gathering that is sorely needed to liberate our lands."
 basic_encrypt_decrypt_researched:0 "Has researched §YBasic Encryption and Decryption technology§!"
