--- a/1.17_musketeer_compatible/localisation/english/nsb_characters_l_english.yml
+++ b/1.17_musketeer_compatible/localisation/english/nsb_characters_l_english.yml
@@ -887,7 +887,7 @@
  INS_kengen:0 "Emile Toussaint Kengen" #1894, 41 yo in 1936, LVA
  INS_jan_hilgers:0 "Jan Hilgers" #1886, 49 yo in 1936, Dutch flying ace, oversaws the establishment of Luchtvaartafdeling
  INS_jacob_zomer:0 "Jacob Zomer" #Luchtvaartafdeling
- INS_charles_van_der_plas:0 "Charles Oike van der Plas" #1891, 45 yo in 1936
+ INS_charles_van_der_plas:0 "Charles Olke van der Plas" #1891, 45 yo in 1936
  INS_cornelis_bussche:0 "Cornelis van den Bussche" #1884, 52 yo in 1936, Raad van Indie member, potential VP
  INS_edgard_du_perron:0 "Edgard du Perron" #1899, 36 yo in 1936, Dutch poet who resided in the Indies
  INS_ernest_douwes_dekker:0 "Ernest Douwes Dekker" #1879, 56 yo in 1936, Boer War veteran, former leader of IP, and currently working in a Japanese trade office at Batavia
@@ -949,7 +949,7 @@
  INS_mohammad_natsir:0 "Mohammad Natsir" #1908, 27 yo in 1936, PSII
  INS_mohammad_nazir:0 "Mohammad Nazir" #1910, 15 yo in 1936, ALRI
  INS_mohammad_tabrani:0 "Mohammad Tabrani Surjowicirto" #1904, 31 yo in 1936
- INS_urip_sumoharjo:0 "urip Sumoharjo" #1893, 43 yo in 1936, KNIL
+ INS_urip_sumoharjo:0 "Urip Sumoharjo" #1893, 43 yo in 1936, KNIL
  INS_oto_iskandar_di_nata:0 "Oto Iskandar Di Nata" #1897, 39 yo in 1936, leader of Paguyuban Pasundan, a Sundanese civil organization
  INS_ruhana_kuddus:0 "Ruhana Kuddus" #1884, 52 yo in 1936, first Indonesian female journalist
  INS_sarjono:0 "Sarjono" #1897, 38 yo in 1936, a member of PKI
